fix: don't cut off a few pixels on top of display

--- a/src/components/Calculator/style.scss
+++ b/src/components/Calculator/style.scss
@@ -41,7 +41,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    overflow: hidden;
   }
 
   &__calculation {
